# ihm-datascience-challenge

./: .gitattributes  pyproject.toml
data/processed/: every_20s_dataset.csv  every_hour_dataset.csv  every_minute_dataset.csv
src/: dataset.py  main.py
src/modeling/: lstm.py  random_forest.py  tpot_regressor.py  xgb_regressor.py
src/utils/: eval.py  plotting.py
