[tool.poetry]
name = "ihm-datascience-challenge"
version = "0.1.0"
description = ""
authors = ["gbPagano <guilhermebpagano@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.2.2"
ydata-profiling = {extras = ["notebook"], version = "^4.8.3"}
scikit-learn = "^1.5.0"
xgboost = "^2.0.3"
tensorflow = {extras = ["and-cuda"], version = "^2.16.1"}
seaborn = "^0.13.2"
tpot = "^0.12.2"
yellowbrick = "^1.5"
rich = "^13.7.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
isort = "^5.13.2"
ruff = "^0.4.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
